modified:   NAMESPACE 	modified:   R/Clustering.R 	modified:   R/RePACT.R 	modified:   README.md 	modified:   man/Prepareforpseudoregress.g.Rd 	modified:   man/Tjct.core.plot.Rd 	modified:   man/Toplot3Dtjct.Rd

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,3 +22,10 @@ export(docluster)
 export(docluster.multi)
 export(docluster.single)
 export(format2)
+import(Matrix)
+import(RColorBrewer)
+import(Seurat)
+import(ggplot2)
+import(gridExtra)
+import(plot3D)
+import(pscl)
