--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,16 @@ export(CallT2Dpeak_pvalueOneTail)
 export(CallT2Dpeak_pvalueOneTail_SpeedUP)
 export(CallT2Dpeak_qvalue)
 export(CallT2Dpeak_qvalue_SpeedUP)
+export(GetRePACTLinearmodel.cca)
 export(GetRePACTmodel.cca)
 export(MakeEvenBinBydepth_SpeedUP)
 export(SelectSigPCs)
+export(Tomerge_v2)
 export(plot_scATAC_RePACT_heatmap)
 export(plot_scRNA_RePACT_heatmap)
 export(scRNA.RePACT)
 export(snATAC.RePACT)
+export(splitter)
 export(standard_fun)
 import(Matrix)
 import(Matrix.utils)
