--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,11 @@ export(CallT2Dpeak_pvalueOneTail)
 export(CallT2Dpeak_pvalueOneTail_SpeedUP)
 export(CallT2Dpeak_qvalue)
 export(CallT2Dpeak_qvalue_SpeedUP)
+export(CallT2Dpeak_qvalue_SpeedUP_ATAC)
 export(GetRePACTLinearmodel.cca)
 export(GetRePACTmodel.cca)
 export(MakeEvenBinBydepth_SpeedUP)
+export(MakeEvenBinBydepth_SpeedUP_ATAC)
 export(SelectSigPCs)
 export(Tomerge_v2)
 export(plot_scATAC_RePACT_heatmap)
